--- a/Final/Bike Trails/WolfesPond.html
+++ b/Final/Bike Trails/WolfesPond.html
@@ -96,7 +96,7 @@
 		<li><strong>Difficulty:</strong> 50% Noob, 50% Experienced</li>
 		<li><strong>Length:</strong> 4 miles</li>
 		<li><strong>Location:</strong> Tottenville, Staten Island, NY</li>
-		<li><strong>Description:</strong> Wolfe’s Pond Park mixes a spectacular natural park environment with interesting trails that wind through the glacial ponds and native forest of this oceanfront park. Wolfe’s Pond is perfect for new mountain bikers and families looking for an enjoyable ride through the woods, as well as for intermediate riders interested in progressing their skills on the short steep climbs and twisty and rooty intermediate trails. The trails are still a work in progress, but the existing trails are open to riding, and dirt jump park is in the works for 2009.</li>
+		<li><strong>Description:</strong> Wolfe's Pond Park mixes a spectacular natural park environment with interesting trails that wind through the glacial ponds and native forest of this oceanfront park. Wolfe's Pond is perfect for new mountain bikers and families looking for an enjoyable ride through the woods, as well as for intermediate riders interested in progressing their skills on the short steep climbs and twisty and rooty intermediate trails. The trails are still a work in progress, but the existing trails are open to riding, and dirt jump park is in the works for 2009.</li>
 	</ul>
 </div>
 
