--- a/Final/index.html
+++ b/Final/index.html
@@ -67,7 +67,7 @@
                 <img src="Images/rsz_who_we_are.jpg">
             </div>
             <div class="float_left">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+            <p>We're just like you! Except a lot geekier, smarter, and probably better-looking. Jokes aside, we know <strong>EVERYTHING</strong> when it comes to cycling. For example, we know why cycling is the best kind of past-time there is and why it's the best sport that humanity has ever invented. Not only are we the smartest and best people around, but we are the nicest and most modest New Yorkers out there, and we (I don't know why I keep on referring to myslef as "we") are the PERFECT guides when it comed to cycling in NYC.</p>
             </div>
         </div>     
 
@@ -79,7 +79,7 @@
                 <img src="Images/rsz_about_the_site.jpg">
             </div>
             <div class="float_right">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+            <p>This site is not meant for your <strong>average</strong> New Yorker! Nor is it meant for your average, run-in-the-mill cyclist. Instead it is meant for users like you - the geek. And in this site we make it okay to be your geeky self and indulge in the world of cycling (as long as it's within the confines of NYC). And if you are new to cycling, YOU NEED TO GTFO NOW! Kidding, kidding. But for real, if you are new then never fear, you can always skedaddle on to our Newbies page where you and all other Noobs can learn how to get started!</p>
             </div>
         </div>
 
@@ -91,7 +91,7 @@
                 <img src="Images/rsz_nyc_laws.jpg">
             </div>
             <div class="float_left">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+            <p>Just regular stuff like if you're pussy, you should <strong>always</strong> wear a helmet, and if you actually have skill and guts you shouldn't. Also, you should avoid driving into any lakes, cars, or people, because that is dangerous. One last thing - if you are new to the whole cycling scene, please do not do any stupid stuff. But if you are one of those experieced vets than please, the world (errhm city) is your oyster! Don't let any of those "laws" get in your way! But above all else, remember that cycling is best enjoyed <strong>together</strong>, so please be nice to your peers.</p>
             </div>
         </div>
 
