--- a/Final/veterans.html
+++ b/Final/veterans.html
@@ -58,11 +58,12 @@
 		5 Borough Bicycle Tour
 	</h2>
 	<img src="Images/5-boro-tour.jpg">
+	<!-- All Information Provided by: http://www.bike.nyc/events/td-five-boro-bike-tour/ -->
 	<ul>
 		<li><strong>Length: </strong>40 miles</li>
 		<li><strong>Register Here: </strong><a href="http://www.bike.nyc/events/td-five-boro-bike-tour/" target="_blank">bike.nyc</a></li>
 	</ul>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
+	<p>On the first Sunday in May, 32,000 cyclists of all skill levels come from around the world to roll through every borough of New York City on streets totally free of cars. For one day, the roads are yours, the bridges are yours, the City is yours - there's no better way to experience the Big Apple. Produced in conjunction with the City of New York, the TD Five Boro Bike Tour Presented by REI is the largest charitable bike ride in the U.S., with proceeds funding our free bike education programs. Last year alone, we taught more than 17,000 kids and adults. When you ride with Bike New York, you're helping us in our mission to empower more New Yorkers with the skills to ride safely and confidently on city streets.</p>
 </div>
 
 <div class="container1">
@@ -70,11 +71,14 @@
 		Escape New York - 2017
 	</h2>
 	<img src="Images/EscapeNewYork.jpg">
+	<!-- All Information Provided by: https://nycc.org/eny2017 -->
 	<ul>
 		<li><strong>Length: </strong>25-100 miles (choose your starting point!)</li>
 		<li><strong>Register Here: </strong><a href="https://nycc.org/eny2017" target="_blank">nycc.org</a></li>
 	</ul>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
+	<p>On Saturday, September 16th, 2017, enjoy the support and hospitality of the New York Cycle Club (NYCC) as we go all out to deliver a food-filled, fun-filled and fabulous day of riding to our friends in the cycling community.  Choose from one of four clearly-marked routes (25 miles, 50 miles, 65 miles, and 100 miles) that will take you over the George Washington Bridge and into the West Hudson Highlands of Bergen and Rockland Counties. 
+
+	All rides start and finish at Sakura Park in Manhattan, conveniently located at 122nd Street and Riverside Drive (across the street from Grant's Tomb) and easily accessible from the 125th Street stop on the 1 train.</p>
 </div>
 
 	</main>
@@ -85,6 +89,7 @@
 <main>
 
 	<div class="container1">
+	<!-- All Information Provided by: http://www.cyclingnews.com/news/bronzini-im-going-to-retire-when-i-feel-like-it/ -->
 		<h2>
 			Bronzini: I'm going to retire when I feel like it
 		</h2>
@@ -93,7 +98,9 @@
 		<li><strong>Date: </strong> May 13, 2017</li>
 		<li><strong>Read More: </strong><a href="http://www.cyclingnews.com/news/bronzini-im-going-to-retire-when-i-feel-like-it/" target="_blank">cyclingnews.com</a></li>
 	</ul>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
+	<p>On Friday, Bronzini finished the race over 8 minutes behind the leaders. When asked about her ambitions the two-time road race world champion admitted she was more focused on the flat sprint stages, and letting her teammates take opportunistic chances.</p>
+
+	<p>"Ah well, survive in the first two stages, and we'll see in stage 3 and 4 if we can get some result," Bronzini said. "We are not a big team here, so we do not have a lot of expectations against full teams on board. We are going to figure it out ourselves if the girls riding with me have the possibility to show themselves in the race. It is important to give to the mates a way to try and have the best chance for themselves."</p>
 	
 	</div> 
 
@@ -103,10 +110,6 @@
 		</h2>
 		<iframe width="650" height="365.625" src="https://www.youtube.com/embed/iKmGR1rNhio" frameborder="0" allowfullscreen></iframe>
 	<ul>
-		<li><strong>Date: </strong> May 13, 2017</li>
-	</ul>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
-
 
 </main>	
 
