--- a/Final/index.html
+++ b/Final/index.html
@@ -23,8 +23,8 @@
                 <li><a href="veterans.html">Veterans</a></li>
                 <li><a>Trails</a>
                     <ul>
-                        <li><a href="Bike Trails/CunninghamPark.html">Cunningham Park</a></li>
-                        <li><a href="Bike Trails/HighBridgePark.html">High Bridge</a></li>
+                        <li><a href="Bike Trails/CunninghamPark.html">Cunningham</a></li>
+                        <li><a href="Bike Trails/HighBridgePark.html">Highbridge</a></li>
                         <li><a href="Bike Trails/WolfesPond.html">Wolfe's Pond</a></li>
                     </ul>
                 </li>
@@ -40,7 +40,7 @@
   <button class="accordion"><a>Trails</a></button>
   <div class="panel">
     <a href="Bike Trails/CunninghamPark.html">Cunningham</a>
-    <a href="Bike Trails/HighBridgePark.html">High Bridge</a>
+    <a href="Bike Trails/HighBridgePark.html">Highbridge</a>
     <a href="Bike Trails/WolfesPond.html">Wolfe's Pond</a>
   </div>
   <a href="newbies.html">Newbies</a>
