--- a/Final/Bike Trails/HighBridgePark.html
+++ b/Final/Bike Trails/HighBridgePark.html
@@ -53,8 +53,8 @@
                 <li><a href="../veterans.html">Veterans</a></li>
                 <li><a>Trails</a>
                     <ul>
-                        <li><a href="CunninghamPark.html">Cunningham Park</a></li>
-                        <li><a href="HighBridgePark.html">High Bridge</a></li>
+                        <li><a href="CunninghamPark.html">Cunningham</a></li>
+                        <li><a href="HighBridgePark.html">Highbridge</a></li>
                         <li><a href="WolfesPond.html">Wolfe's Pond</a></li>
                     </ul>
                 </li>
@@ -74,7 +74,7 @@
   <button class="accordion"><a>Trails</a></button>
   <div class="panel">
     <a href="CunninghamPark.html">Cunningham</a>
-    <a href="HighBridgePark.html">High Bridge</a>
+    <a href="HighBridgePark.html">Highbridge</a>
     <a href="WolfesPond.html">Wolfe's Pond</a>
   </div>
   <a href="../newbies.html">Newbies</a>
